objects/CSS_ECM__c.object
<CustomObject>
    <description>An object between JO and Fault code to store ECM for Multi ECM engines</description>
    <fields>
        <fullName>Advertised_Power_RPM__c</fullName>
        <label>Advertised Power RPM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertised_Power_at_RPM__c</fullName>
        <label>Advertised Power at RPM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Plant__c</fullName>
        <label>Build Plant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CORE__c</fullName>
        <label>CORE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPL_Number__c</fullName>
        <label>CPL Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calibration_Date_Time_Stamp__c</fullName>
        <label>Calibration Date Time Stamp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calibration_Software_Phase__c</fullName>
        <label>Calibration Software Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Parts_List__c</fullName>
        <label>Control Parts List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location_V2__c</fullName>
        <label>Customer Location V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_V2__c</fullName>
        <label>Customer Name V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Unit_Number_V2__c</fullName>
        <label>Customer Unit Number V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Unit_Number__c</fullName>
        <label>Customer Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Option__c</fullName>
        <label>DO Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Code__c</fullName>
        <label>ECM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Image_Name__c</fullName>
        <label>ECM Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Name__c</fullName>
        <label>ECM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Number__c</fullName>
        <description>Stores ECM Number(As of now 0-11) are possible values</description>
        <label>ECM Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECM_Part_Number_V2__c</fullName>
        <label>ECM Part Number V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Part_Number__c</fullName>
        <label>ECM Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Serial_Number__c</fullName>
        <label>ECM Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EData_Plate_Param_Unit__c</fullName>
        <label>Data Plate Param Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Model_Name__c</fullName>
        <label>EPA Model Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERT__c</fullName>
        <label>ERT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_Customer_Number__c</fullName>
        <label>ESN Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_ECM_Code__c</fullName>
        <label>ESN ECM Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <label>ETD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Build_Date__c</fullName>
        <label>Engine Build Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Make__c</fullName>
        <label>Engine Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Model__c</fullName>
        <label>Engine Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Code__c</fullName>
        <label>Fuel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Pump_Calibration__c</fullName>
        <label>Fuel Pump Calibration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Pump_Part_Number__c</fullName>
        <label>Fuel Pump Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GITSValidation__c</fullName>
        <formula>IF(CONTAINS(CORE__c, &quot;38&quot;), &quot;Full product support may not be in CSS. Please use traditional troubleshooting methods.&quot;,
IF(CONTAINS(CORE__c, &quot;20&quot;), &quot;Cannot support in CSS.&quot;, Null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GITSValidation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governed_Speed__c</fullName>
        <label>Governed Speed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Order</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS ECM</relationshipLabel>
        <relationshipName>CSS_ECM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KOT__c</fullName>
        <label>KOT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Config__c</fullName>
        <label>Marketing Config</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Model__c</fullName>
        <label>Marketing Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Name_V2__c</fullName>
        <label>OEM Name V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Name__c</fullName>
        <label>OEM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Vehicle_Equipment_Model_V2__c</fullName>
        <label>OEM Vehicle Equipment Model V2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Vehicle_Equipment_Model__c</fullName>
        <label>OEM Vehicle Equipment Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Option__c</fullName>
        <label>Other Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Torque_RPM__c</fullName>
        <label>Peak Torque RPM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peak_Torque_at_RPM__c</fullName>
        <label>Peak Torque at RPM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Option__c</fullName>
        <label>SC Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDP_Customer_Name__c</fullName>
        <label>SDP Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <label>Service Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Order__c</fullName>
        <label>Shop Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Config__c</fullName>
        <label>Technical Config</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>QSOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN_ESN__c</fullName>
        <label>VIN ESN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Equipment_Year__c</fullName>
        <label>Vehicle or Equipment Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start__c</fullName>
        <label>Warranty Start</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS ECM</relationshipLabel>
        <relationshipName>CSS_ECM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSS ECM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS ECM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>